add missing stuff around migrations
